# toyos-rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  x86_64-unknown-none-gnu.json
crates/alloc_buddy_simple/: Cargo.toml  README.md
crates/alloc_buddy_simple/src/: heap.rs  lib.rs
crates/alloc_toyos/: Cargo.toml
crates/alloc_toyos/src/: heap.rs  integration.rs  lib.rs  lib_core.rs  lib_std.rs  math.rs
crates/cpuio/: Cargo.toml  README.md
crates/cpuio/examples/: read_scancode.rs
crates/cpuio/src/: lib.rs  x86.rs
crates/pic8259_simple/: Cargo.toml  README.md
crates/pic8259_simple/src/: lib.rs
src/: heap.rs  lib.rs  macros.rs  runtime_glue.rs  vga.rs
src/arch/: mod.rs
src/arch/x86_64/: boot.asm  grub.cfg  interrupt_handlers.asm  interrupts.rs  io.rs  keyboard.rs  linker.ld  long_mode_init.asm  mod.rs  multiboot_header.asm  pci.rs  pic.rs  serial.rs  vga.rs
