[package]
name = "toyos"
version = "0.1.0"
authors = [
        # Various customizations.
        "Eric Kidd <git@randomhacks.net>",
        # Original blog_os code.
        "Philipp Oppermann <dev@phil-opp.com>"
]

[lib]
crate-type = ["staticlib"]

[dependencies]
# Low-level functions like memcpy.
rlibc = "*"
# Spinlocks.
spin = "*"

[dependencies.alloc_toyos]
path = "crates/alloc_toyos"
features = ["use-as-rust-allocator"]
