[package]
name = "alloc_toyos"
version = "0.1.0"
authors = ["Eric Kidd <git@randomhacks.net>"]

[features]

# When this feature is enabled, build this crate as the actual Rust system
# allocator.  This also requires pulling in a spinlock crate, to control
# access to the shared heap.
use-as-rust-allocator = ["spin"]

[dependencies]
spin = { version = "*", optional = true }
