[package]
name = "cpuio"
version = "0.3.1"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Bare metal (no_std) inb, outb, inw, outw, inl, outw instructions with Rust-like API"
homepage = "https://github.com/emk/toyos-rs/tree/master/crates/cpuio"
repository = "https://github.com/emk/toyos-rs"
readme = "README.md"
keywords = ["no_std", "kernel", "io"]
license = "Apache-2.0/MIT"
