[package]
name = "pic8259_simple"
version = "0.2.0"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Kernel-space interface to the 8259 and 8259A interrupt controllers"
homepage = "https://github.com/emk/toyos-rs/tree/master/crates/pic8259_simple"
repository = "https://github.com/emk/toyos-rs"
readme = "README.md"
keywords = ["no_std", "kernel", "interrupts"]
license = "Apache-2.0/MIT"

[dependencies.cpuio]
version = "0.3.0"
path = "../cpuio"
